# university_app

./: .gitignore
chats_app/: admin.py  models.py
chats_app/migrations/: 0001_initial.py  0002_message.py  0003_memberchat_chat_chat_members.py
education_app/: admin.py  forms.py  models.py  urls.py  views.py
education_app/migrations/: 0001_initial.py  0002_alter_assessment_student_alter_assessment_teacher.py
education_app/templates/education_app/: work_create.html  work_delete.html  work_update.html  works_detail.html  works_list.html
rest/: serializers.py  urls.py  views.py
room_app/: models.py  urls.py  views.py
room_app/migrations/: 0001_initial.py
room_app/templates/room_app/: room_detail.html  room_list.html
static/: styles.css
templates/: index.html
university-app/: pyproject.toml
user_app/: forms.py  urls.py  views.py
user_app/templates/user_app/: base.html  login.html  signup.html
web_dev_project/: asgi.py  settings.py  urls.py  wsgi.py
